# snakewasm

./: .gitignore  Cargo.toml  README.md  env-prep.sh  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml
notebook/: nn_3x512_m4096.pk  snake.onnx  snake_dqn.ipynb
src/: app.html  app.js  game.js  game.rs  index.html  index.js  main.rs  manifest.json  snake.rs  util.rs  utils.js
src/css/: app.css  skeleton.css
src/rs/: Cargo.toml  Taskfile.yml
src/rs/src/: game.rs  lib.rs  main.rs  py.rs  snake.rs  util.rs
