[package]
name = "snake"
version = "0.1.0"
authors = ["Antti Lamminsalo <antti.lamminsalo@gmail.com>"]
edition = "2021"

[lib]
name = "snake"
crate-type = ["cdylib"]

[dependencies]
rand = {version="0.8", default-features = false, features = ["std_rng", "std"]}
getrandom = {version="0.2", features=["js"]}
lazy_static = "1.4"
serde_json = "1.0"
wasm-bindgen = "0.2"
pyo3 = { version = "0.16.4", features = ["extension-module"], optional = true }
wee_alloc = {version="0.4.5", optional=true}

[features]
default = ["wee_alloc"]
pyo3 = ["dep:pyo3"]
wee_alloc = ["dep:wee_alloc"]

[profile.release]
lto = true
