[package]
name = "snake"
version = "0.1.0"
authors = ["Antti Lamminsalo <antti.lamminsalo@gmail.com>"]
edition = "2021"

[lib]
name = "snake"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = {version="0.8", default-features = false, features = ["std_rng", "std"]}
getrandom = {version="0.2", features=["js"]}
lazy_static = "1.4"
serde_json = "1.0"
pyo3 = { version = "0.17.3", features = ["extension-module"], optional = true }
wee_alloc = {version="0.4.5", optional=true}
ndarray = "0.15.6"
serde-wasm-bindgen = "0.4.5"

[features]
default = []
wee_alloc = ["dep:wee_alloc"]
py = ["dep:pyo3"]
js = ["wee_alloc"]

[profile.release]
lto = true
